se aplico busqueda por nombre, no anda el boton, pero si se presiona Enter, corregir

--- a/src/main/resources/templates/addCharacter.html
+++ b/src/main/resources/templates/addCharacter.html
@@ -93,9 +93,7 @@
 
 							<!-- MOVIES -->
 							<label for="listMovies"> MOVIES</label>
-							<div
-								th:object=${movies}
-								name="title">
+							<div>
 								<select
 									multiple
 									name="title">
