--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -13,11 +13,14 @@
 	<nav
 		class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
 		<ul>
-			<li class="nav-item">
-				<a
-					class="nav-link"
-					href="/index">DISNEY HOME</a>
-			</li>
+			<li class="nav-item"><a
+				class="nav-link"
+				th:href="@{/index}">DISNEY HOME</a></li>
+
+			<li class="nav-item"><a
+				class="nav-link"
+				th:href="@{/characters}">LIST CHARACTERS</a></li>
+
 		</ul>
 	</nav>
 </div>
@@ -25,12 +28,31 @@
 
 <body>
 
-
-
 	<div class="container">
 		<a
 			th:href="@{/characters/addCharacter}"
 			class="btn btn-primary btn-sm mb-3">Add Character</a>
+
+		<form
+			th:action="@{/search}"
+			method="GET">
+			<div class="input-group mb-3">
+				<button
+					class="btn btn-outline-secondary"
+					type="button">Buscar por nombre</button>
+				<input
+					type="text"
+					class="form-control"
+					placeholder="enter name"
+					aria-label="Example text with button addon"
+					aria-describedby="button-addon1"
+					name="name"
+					th:value="name">
+			</div>
+
+		</form>
+
+
 		<table
 			class="table"
 			th:object="${personajes}">
@@ -42,29 +64,23 @@
 			<tbody>
 				<tr th:each="personaje: ${personajes}">
 					<td th:text="${personaje.name}"></td>
-					<td>
-						<img
-							th:src="@{'/imgCharacters/' + ${personaje.imgPersonaje}}"
-							th:alt="${personaje.imgPersonaje}"
-							width="60"
-							height="60" />
-					</td>
+					<td><img
+						th:src="@{'/imgCharacters/' + ${personaje.imgPersonaje}}"
+						th:alt="${personaje.imgPersonaje}"
+						width="60"
+						height="60" /></td>
 					<td
 						class="btn-group "
-						role="group">
-						<a
-							th:href="@{/characters/editCharacter/{id}(id=${personaje.id})}"
-							type="button"
-							class="btn btn-success"> EDIT </a>
-						<a
-							th:href="@{/characters/{id}(id=${personaje.id})}"
-							type="button"
-							class="btn btn-danger"> DELETE </a>
-						<a
-							th:href="@{/characters/detailCharacter/{id}(id=${personaje.id})}"
-							type="button"
-							class="btn btn-info"> DETAIL </a>
-					</td>
+						role="group"><a
+						th:href="@{/characters/editCharacter/{id}(id=${personaje.id})}"
+						type="button"
+						class="btn btn-success"> EDIT </a> <a
+						th:href="@{/characters/{id}(id=${personaje.id})}"
+						type="button"
+						class="btn btn-danger"> DELETE </a> <a
+						th:href="@{/characters/detailCharacter/{id}(id=${personaje.id})}"
+						type="button"
+						class="btn btn-info"> DETAIL </a></td>
 				</tr>
 			</tbody>
 		</table>
