--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -1,30 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>list characters</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-	crossorigin="anonymous">
-</head>
-<div class="container my-3">
-	<nav
-		class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
-		<ul>
-			<li class="nav-item"><a
-				class="nav-link"
-				th:href="@{/index}">DISNEY HOME</a></li>
-
-			<li class="nav-item"><a
-				class="nav-link"
-				th:href="@{/characters}">LIST CHARACTERS</a></li>
-
-		</ul>
-	</nav>
-</div>
-
+<html xlmns:th="http://www.thymeleaf.com">
+<head th:replace="layout/layout :: head"></head>
+<header th:replace="layout/layout :: header"></header>
 
 <body>
 
@@ -34,41 +11,103 @@
 			class="btn btn-primary btn-sm mb-3">Add Character</a>
 
 		<form
-			th:action="@{/search}"
+			th:action="@{/characters}"
 			method="GET">
 			<div class="input-group mb-3">
 				<button
-					class="btn btn-outline-secondary"
-					type="button">Buscar por nombre</button>
+					type="submit"
+					class="btn btn-outline-dark">Buscar por nombre</button>
 				<input
 					type="text"
 					class="form-control"
 					placeholder="enter name"
 					aria-label="Example text with button addon"
 					aria-describedby="button-addon1"
-					name="name"
-					th:value="name">
+					name="name">
 			</div>
-
 		</form>
+
+
+		<form
+			th:action="@{/characters}"
+			method="GET">
+			<div class="input-group mb-3">
+				<button
+					type="submit"
+					class="btn btn-outline-dark">Filtrar por edad</button>
+				<input
+					type="number"
+					class="form-control"
+					placeholder="years"
+					aria-label="Example text with button addon"
+					aria-describedby="button-addon1"
+					name="year">
+			</div>
+		</form>
+
+		<form
+			th:action="@{/characters}"
+			method="GET">
+			<div class="input-group mb-3">
+				<button
+					type="submit"
+					class="btn btn-outline-dark">Filtrar por peso</button>
+				<input
+					type="number"
+					class="form-control"
+					placeholder="weight"
+					aria-label="Example text with button addon"
+					aria-describedby="button-addon1"
+					name="weight">
+			</div>
+		</form>
+
+
+		<form
+			th:action="@{/characters}"
+			method="GET">
+			<div class="input-group mb-3">
+				<button
+					type="submit"
+					class="btn btn-outline-dark">Filtrar por peliculas</button>
+				<div>
+					<select name="title">
+						<option
+							th:each="movie: ${movies}"
+							th:text="${movie.title}"
+							name="title"
+							th:value="${movie.title}">
+					</select>
+				</div>
+			</div>
+		</form>
+
 
 
 		<table
 			class="table"
 			th:object="${personajes}">
+
 			<thead>
 				<th>Name</th>
 				<th>Imagen</th>
 				<th>Operation</th>
 			</thead>
+
 			<tbody>
 				<tr th:each="personaje: ${personajes}">
+
+					<!-- name -->
 					<td th:text="${personaje.name}"></td>
+
+					<!-- imagen -->
 					<td><img
 						th:src="@{'/imgCharacters/' + ${personaje.imgPersonaje}}"
 						th:alt="${personaje.imgPersonaje}"
 						width="60"
 						height="60" /></td>
+
+					<!-- operacion -->
 					<td
 						class="btn-group "
 						role="group"><a
