--- a/src/main/resources/templates/detailCharacter.html
+++ b/src/main/resources/templates/detailCharacter.html
@@ -1,31 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>list characters</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-	crossorigin="anonymous">
-</head>
-<div class="container my-3">
-	<nav
-		class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
-		<ul>
-			<li class="nav-item">
-				<a
-					class="nav-link"
-					href="/index">DISNEY HOME</a>
-			</li>
-			<li class="nav-item">
-				<a
-					class="nav-link"
-					href="/characters">LIST CHARACTERS</a>
-			</li>
-		</ul>
-	</nav>
-</div>
+<html xlmns:th="http://www.thymeleaf.com">
+<head th:replace="layout/layout :: head"></head>
+<header th:replace="layout/layout :: header"></header>
+
 <body>
 
 	<div class="container">
@@ -45,19 +22,16 @@
 					<td th:text="*{name}"></td>
 					<td th:text="*{year}"></td>
 					<td th:text="*{weight}"></td>
-					<td>
-						<img
-							th:src="@{'/imgCharacters/' + *{imgPersonaje}}"
-							th:alt="*{imgPersonaje}"
-							width="60"
-							height="60" />
-
-					</td>
+					<td><img
+						th:src="@{'/imgCharacters/' + *{imgPersonaje}}"
+						th:alt="*{imgPersonaje}"
+						width="60"
+						height="60" /></td>
 
 				</tr>
 			</tbody>
 		</table>
-
+		<!--  
 		<label for="listMovies"> LIST MOVIES ASOCIATES</label>
 		<div
 			class="container"
@@ -67,6 +41,37 @@
 				<ul>
 					<il th:text="${movie}"></il>
 				</ul>
+			</div>
+		</div>
+ -->
+
+		<div
+			class="accordion accordion-flush"
+			id="accordionFlushExample">
+			<div class="accordion-item">
+				<h2
+					class="accordion-header"
+					id="flush-headingOne">
+					<button
+						class="accordion-button collapsed"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#flush-collapseOne"
+						aria-expanded="false"
+						aria-controls="flush-collapseOne">List Movies Asociates</button>
+				</h2>
+				<div
+					id="flush-collapseOne"
+					class="accordion-collapse collapse"
+					aria-labelledby="flush-headingOne"
+					data-bs-parent="#accordionFlushExample">
+					<div
+						class="accordion-body"
+						th:each="movie : ${moviesAsociate}"
+						name="listMovies">
+						<a th:text="${movie}">
+					</div>
+				</div>
 			</div>
 		</div>
 
