--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -76,7 +76,7 @@
 							th:each="movie: ${movies}"
 							th:text="${movie.title}"
 							name="title"
-							th:value="${movie.title}">
+							th:value="${movie}">
 					</select>
 				</div>
 			</div>
