controlador de movies

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 		<a
 			type="button"
 			class="btn btn-primary"
-			th:href="@{/characters}">characters</a>
+			th:href="@{/characters}">Characters</a>
 		<br />
 		<a
 			type="button"
