controlador Movie, se agrego la opcion de agregar movies

--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -5,6 +5,9 @@
 <body>
 
 	<div class="container">
+	<a
+			th:href="@{/movies/addMovie}"
+			class="btn btn-primary btn-sm mb-3">Add Movie</a>
 	
 			<form
 			th:action="@{/movies}"
@@ -24,11 +27,6 @@
 				</div>
 			</div>
 		</form>
-	
-	
-	
-	
-	
 	
 	
 		<table
