--- a/src/main/resources/templates/layout/layoutMovies.html
+++ b/src/main/resources/templates/layout/layoutMovies.html
@@ -10,6 +10,7 @@
 	crossorigin="anonymous">
 </head>
 
+
 <body>
 
 
@@ -18,13 +19,17 @@
 			<nav
 				class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
 				<ul>
-					<li class="nav-item"><a
-						class="nav-link"
-						th:href="@{/index}">DISNEY HOME</a></li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							th:href="@{/index}">DISNEY HOME</a>
+					</li>
 
-					<li class="nav-item"><a
-						class="nav-link"
-						th:href="@{/movies}">LIST MOVIES</a></li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							th:href="@{/movies}">LIST MOVIES</a>
+					</li>
 
 				</ul>
 			</nav>
