agregando criterios de busqueda para movies, falla con el el ID de Generos y tambien en Personajes

--- a/src/main/resources/templates/addMovie.html
+++ b/src/main/resources/templates/addMovie.html
@@ -59,7 +59,7 @@
 										th:each="gender: ${genders}"
 										th:text="${gender.genderName}"
 										name="title"
-										th:value="${movie.title}">
+										th:value="${gender.genderName}">
 								</select>
 							</div>
 
