--- a/src/main/resources/templates/detailMovie.html
+++ b/src/main/resources/templates/detailMovie.html
@@ -11,11 +11,11 @@
 			th:object="${movie}">
 			<thead>
 				<tr>
-					<th>Title</th>
-					<th>Creation Date</th>
-					<th>Qualification</th>
-					<th>Imagen</th>
-					<th>Gender</th>
+					<th>TITULO</th>
+					<th>FECHA DE CREACION</th>
+					<th>CALIFICACION</th>
+					<th>IMAGEN</th>
+					<th>GENERO</th>
 				</tr>
 			</thead>
 			<tbody>
