--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,12 +17,12 @@
 		<a
 			type="button"
 			class="btn btn-primary"
-			th:href="@{/characters}">Characters</a>
+			th:href="@{/characters}">IR A PERSONAJES</a>
 		<br />
 		<a
 			type="button"
 			class="btn btn-danger"
-			th:href="@{/movies}">Movies</a>
+			th:href="@{/movies}">IR A PELICULAS</a>
 	</div>
 </body>
 </html>
