--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -20,11 +20,11 @@
 				<ul>
 					<li class="nav-item"><a
 						class="nav-link"
-						th:href="@{/index}">DISNEY HOME</a></li>
+						th:href="@{/index}">IR AL INICIO</a></li>
 
 					<li class="nav-item"><a
 						class="nav-link"
-						th:href="@{/characters}">LIST CHARACTERS</a></li>
+						th:href="@{/characters}">LISTA DE PERSONAJES</a></li>
 
 				</ul>
 			</nav>
