--- a/src/main/resources/templates/addCharacter.html
+++ b/src/main/resources/templates/addCharacter.html
@@ -9,7 +9,7 @@
 		<div class="row">
 			<div
 				class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-				<h1 class="text-center">Create New Character</h1>
+				<h1 class="text-center">CREAR NUEVO PERSONAJE</h1>
 				<div class="card-body">
 					<form
 						th:action="@{/saveCharacter}"
@@ -20,7 +20,7 @@
 						<div class="form-group">
 
 							<!--  Name -->
-							<label>Character Name</label> <input
+							<label>NOMBRE DE PERSONAJE</label> <input
 								class="form-control"
 								type="text"
 								name="Name"
@@ -31,7 +31,7 @@
 								th:errors="*{name}"></div>
 
 							<!-- year-->
-							<label>Character year</label> <input
+							<label>EDAD DEL PERSONAJE</label> <input
 								class="form-control"
 								type="number"
 								min="1"
@@ -42,7 +42,7 @@
 
 
 							<!-- weight -->
-							<label>Character weight</label> <input
+							<label>PESO DEL PERSONAJE</label> <input
 								class="form-control"
 								type="number"
 								min="1"
@@ -57,7 +57,7 @@
 								name="file" />
 
 							<!-- MOVIES -->
-							<label for="listMovies"> MOVIES</label>
+							<label for="listMovies"> PELICULAS EN LAS QUE PARTICIPA</label>
 							<div>
 								<select
 									multiple
@@ -76,7 +76,7 @@
 
 							<!-- BTN -->
 							<div class="footer-boody">
-								<button class="btn btn-primary">Submit</button>
+								<button class="btn btn-primary">ENVIAR</button>
 
 							</div>
 
