--- a/src/main/resources/templates/layout/layoutMovies.html
+++ b/src/main/resources/templates/layout/layoutMovies.html
@@ -22,13 +22,13 @@
 					<li class="nav-item">
 						<a
 							class="nav-link"
-							th:href="@{/index}">DISNEY HOME</a>
+							th:href="@{/index}">IR AL INICIO</a>
 					</li>
 
 					<li class="nav-item">
 						<a
 							class="nav-link"
-							th:href="@{/movies}">LIST MOVIES</a>
+							th:href="@{/movies}">LISTA DE PELICULAS</a>
 					</li>
 
 				</ul>
